[package]
name = "fudge"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Manso <carlosmgov7k@gmail.com>"]
description = "A Rust app to autocorrect terminal commands on request"
license = ""
repository = ""

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
notify = { version = "8.0", features = ["serde"] }